--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,10 +34,15 @@ dependencies:
   odoo_rpc: ^0.4.5
   flutter_mailer: ^2.0.0
   universal_html: ^2.0.8
-  flutter_email_sender: ^5.0.2
+  flutter_email_sender: ^5.0.2 
+  flutter_svg:
+  hijri: ^3.0.0
+  hijri_picker: ^3.0.0 
   flutter_pdfview: ^1.2.0
   path_provider: ^2.0.3
-  
+  flutter_spinkit: ^5.1.0
+  provider:
+  intl:  
   awesome_dialog: ^2.1.1
   file_picker: ^4.0.1
   google_fonts: ^2.1.0
@@ -73,17 +80,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Cairo
+      fonts:
+        - asset: assets/font/Cairo/Cairo-Regular.ttf
+        - asset: assets/font/Cairo/Cairo-Bold.ttf
+        - asset: assets/font/Cairo/Cairo-Black.ttf
+        - asset: assets/font/Cairo/Cairo-ExtraLight.ttf
+        - asset: assets/font/Cairo/Cairo-SemiBold.ttf
+        - asset: assets/font/Cairo/Cairo-Light.ttf
+    
+  
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
