this the version

--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=123456
-keyPassword=123456
+storePassword=bcool1984
+keyPassword=bcool1984
 keyAlias=jumaiah
 storeFile=jumaiah-keystore.jks
