--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   awesome_dialog: ^2.1.1
   file_picker: ^4.0.1
   google_fonts: ^2.1.0
-  flutter_full_pdf_viewer: ^1.0.6
+  flutter_full_pdf_viewer:
   animated_text_kit: ^4.2.1
 dev_dependencies:
   flutter_test:
