--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,14 @@ dependencies:
   path_provider: ^2.0.3
   flutter_spinkit: ^5.1.0
   provider:
-  intl:  
+  intl: 
+  photo_view: ^0.13.0 
   awesome_dialog: ^2.1.1
   file_picker: ^4.0.1
   google_fonts: ^2.1.0
   flutter_full_pdf_viewer:
   animated_text_kit: ^4.2.1
+  image_picker: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
