--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,28 +30,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  shared_preferences: ^2.0.7
-  odoo_rpc: ^0.4.5
-  flutter_mailer: ^2.0.0
-  universal_html: ^2.0.8
-  flutter_email_sender: ^5.0.2 
+  shared_preferences: 
+  flutter_mailer:
+  
+  universal_html:
+  flutter_email_sender: 
   flutter_svg:
-  hijri: ^3.0.0
-  hijri_picker: ^3.0.0 
-  flutter_pdfview: ^1.2.0
-  path_provider: ^2.0.3
-  flutter_spinkit: ^5.1.0
+  hijri:
+  hijri_picker:  
+  flutter_pdfview:
+  path_provider: 
+  flutter_spinkit: 
   provider:
   intl:  
-  awesome_dialog: ^2.1.1
-  file_picker: ^4.0.1
-  google_fonts: ^2.1.0
+  awesome_dialog: 
+  file_picker: 
+  google_fonts: 
+  odoo_rpc: ^0.2.9
+  
+
   flutter_full_pdf_viewer:
-  animated_text_kit: ^4.2.1
+  animated_text_kit: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons:
 
 flutter_icons:
   android: false
