--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,19 +43,19 @@ dependencies:
   flutter_spinkit: 
   provider:
   intl:  
-  odoo_rpc: ^0.2.9
+  odoo_rpc: ^0.4.5
   
 
-  animated_text_kit: 
 
   photo_view: ^0.13.0 
   awesome_dialog: ^2.1.1
   file_picker: ^4.0.1
-  google_fonts: ^2.1.0
+  google_fonts: 
   flutter_full_pdf_viewer:
   animated_text_kit: ^4.2.1
-  image_picker: 
-  lottie: ^1.2.1  
+  image_picker: ^0.8.4+4
+
+  lottie: 
 dev_dependencies:
   flutter_test:
     sdk: flutter
