--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=bcool1984
-keyPassword=bcool1984
+storePassword=android
+keyPassword=android
 keyAlias=jumaiah
 storeFile=jumaiah-keystore.jks
