--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,7 @@ dependencies:
   awesome_dialog: ^2.1.1
   file_picker: ^4.0.1
   google_fonts: 
-  flutter_full_pdf_viewer:
+  syncfusion_flutter_pdfviewer: ^19.3.57-beta
   animated_text_kit: ^4.2.1
   image_picker: ^0.8.4+4
 
