--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
-storePassword=android
-keyPassword=android
+storePassword=123456
+keyPassword=123456
 keyAlias=jumaiah
 storeFile=jumaiah-keystore.jks
