--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   image_picker: ^0.8.4+4
 
   lottie: 
+  mix: ^0.0.4
+  dotted_border: ^2.0.0+2
 dev_dependencies:
   flutter_test:
     sdk: flutter
