--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dev_dependencies:
   flutter_launcher_icons:
 
 flutter_icons:
-  android: false
+  android: true
   ios: true
   image_path: "assets/logo.png"
   adaptive_icon_background: "#ffffff"
