--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -39,7 +39,7 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.jumaiah.app"
+        applicationId "net.jumaiah.app"
         minSdkVersion 20
           targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
