--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,7 +61,8 @@ dependencies:
   lottie: 
   mix: ^0.0.4
   dotted_border: ^2.0.0+2
-  share_plus: ^3.1.0
+  share_plus: ^4.0.10+1
+  string_unescape: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
